--- a/css/admin.css
+++ b/css/admin.css
@@ -11,24 +11,24 @@
   background-color: #ffb200;
 }
 
-/* line 21, ../scss/admin.scss */
-.frm_email_settings .widget-title .frm_form_action_icon i.pronamic-pay-formidable-icon {
+/* line 22, ../scss/admin.scss */
+.frm_email_settings .frm_single_pronamic_pay_settings .widget-title .frm_form_action_icon .pronamic-pay-formidable-icon {
   width: 24px;
   height: 24px;
   -webkit-filter: invert(100%) saturate(0%) contrast(85%);
           filter: invert(100%) saturate(0%) contrast(85%);
 }
-/* line 33, ../scss/admin.scss */
-.frm_email_settings .frm_single_pronamic_pay_settings:hover .widget-title .frm_form_action_icon i.pronamic-pay-formidable-icon {
+/* line 32, ../scss/admin.scss */
+.frm_email_settings .frm_single_pronamic_pay_settings:hover .frm_form_action_icon .pronamic-pay-formidable-icon {
   -webkit-filter: invert(100%) saturate(0%) contrast(20%);
           filter: invert(100%) saturate(0%) contrast(20%);
 }
 
-/* line 44, ../scss/admin.scss */
+/* line 42, ../scss/admin.scss */
 .edit_field_type_pronamic_payment_method_select input[type='pronamic_payment_method_select'] {
   display: none !important;
 }
-/* line 49, ../scss/admin.scss */
+/* line 47, ../scss/admin.scss */
 .edit_field_type_pronamic_payment_method_select .pronamic-pay-formidable-eip-disable {
   color: #aaa;
   cursor: default;
